# forge

./: .gitignore  .toc-descriptions.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  DIGEST.md  FINDINGS.md  FORGE_FORENSIC_AUDIT_REPORT.md  FORGE_FORNSIC_AUDIT_REPORT.md  GEMINI.md  IFA_ORIGINAL_PHASES.md  INVARIANT_FIRST_ARCHITECTURE.md  PLAN.md  README.md  SECURITY.md  big.txt  clippy.toml  clippy_output.txt  deny.toml  engine_arch_headers.txt  engine_headers.txt  forge.diff  gpt52p_bug_hunter_prompt.md  gpt52p_git_tools_review_prompt.md  gpt52p_reliability_prompt.md  gpt52p_security_prompt.md  gpt52p_spec_review_prompt.md  gpt52p_spec_review_template.md  gpt52p_testing_audit_prompt.md  gpt52p_uiux_review_prompt.md  gpt52p_webfetch_review_prompt.md  ifa_refactor.md  justfile  lorem.txt  plan.md  prompt.md  refactor.md  review.md  (+2 more)
.cargo/: config.toml
.config/: nextest.toml
assets/: prompt.md
cli/: Cargo.toml  README.md
cli/assets/: base_prompt.md  base_prompt_claude.md  base_prompt_gemini.md  base_prompt_openai.md  contextinfinity_extraction.md  contextinfinity_retrieval.md  distillation.md  gemini_prompt.md  prompt.md
cli/assets/partials/: agentic_operations.md  coding_philosophy.md  lp1.md  plan_tool.md  response_style.md  security.md
cli/src/: assets.rs  crash_hardening.rs  main.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
context/: Cargo.toml  README.md
context/assets/: distillation.md
context/src/: atomic_write.rs  distillation.rs  fact_store.rs  history.rs  lib.rs  librarian.rs  manager.rs  model_limits.rs  sqlite_security.rs  sqlite_util.rs  stream_journal.rs  summarization.rs  time_utils.rs  token_counter.rs  tool_journal.rs  working_context.rs
core/: Cargo.toml  README.md
core/src/: display.rs  env_context.rs  environment.rs  errors.rs  lib.rs  notifications.rs  security.rs  thinking.rs  util.rs
crates/forge-context/: Cargo.toml
crates/forge-context/src/: history.rs  lib.rs  manager.rs  model_limits.rs  stream_journal.rs  summarization.rs  token_counter.rs
crates/forge-engine/: Cargo.toml  README.md
crates/forge-engine/src/: lib.rs
crates/forge-providers/: Cargo.toml
crates/forge-providers/src/: lib.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: input.rs  lib.rs  ui_inline.rs
docs/: ANTHROPIC_MESSAGES_API.md  BUILD_TOOL_SRD.md  CI_RUNBOOK.md  CLI.md  CODEQUERY_SRD.md  COLOR_SCHEME.md  CONTEXT_ARCHITECTURE.md  CONTEXT_INFINITY.md  CONTEXT_INFINITY_SRD.md  CONVERSATION_SEARCH_SRD.md  CONVERSATION_SEARCH_SRS.md  DELETE_FILE_SRD.md  DESIGN.md  EASTER_EGGS.md  ENGINE.md  ENGINE_ARCHITECTURE.md  FILEOPS_SRD.md  FOCUS_VIEW_PLAN.md  FOCUS_VIEW_REVIEW.md  FORGE_THREAT_MODEL.md  GEMINI_PDF_SDD.md  GIT_TOOLS_SRD.md  GLOB_SRD.md  HTTP_CLIENT_ROBUSTNESS_SRS.md  IFA_CONFORMANCE_RULES.md  INVARIANT_FIRST_ARCHITECTURE.md  LINUX_HARDENING.md  LIST_DIRECTORY_SRD.md  LOCAL_SEARCH_SRD.md  LP1.md  LP2_PROPOSAL.md  LSP_ENHANCEMENTS_SDD.md  LSP_SRS.md  MACOS_SANDBOX_PLAN.md  MULTIMODAL_ATTACHMENT_SDD.md  (+65 more)
engine/: Cargo.toml  README.md
engine/forge-test/: history.json
engine/src/: checkpoints.rs  commands.rs  config.rs  distillation.rs  environment.rs  errors.rs  init.rs  input_modes.rs  lib.rs  lsp_integration.rs  notifications.rs  persistence.rs  plan.rs  security.rs  session_state.rs  state.rs  streaming.rs  summarization.rs  tests.rs  tool_loop.rs  util.rs
engine/src/app/: checkpoints.rs  commands.rs  distillation.rs  init.rs  input_modes.rs  lsp_integration.rs  mod.rs  persistence.rs  plan.rs  settings.rs  streaming.rs  tests.rs  tool_gate.rs  tool_loop.rs
engine/src/core/: mod.rs  thinking.rs
engine/src/operation/: mod.rs
engine/src/runtime/: mod.rs
engine/src/tools/: builtins.rs  command_blacklist.rs  git.rs  lp1.rs  memory.rs  mod.rs  phase_gate.rs  process.rs  recall.rs  sandbox.rs  search.rs  shell.rs  webfetch.rs  windows_run.rs  windows_run_host.rs
engine/src/ui/: animation.rs  display.rs  file_picker.rs  history.rs  input.rs  mod.rs  modal.rs  model_select.rs  panel.rs  scroll.rs  view_state.rs
engine/tests/: ifa_compile_fail.rs
engine/tests/compile_fail/: tool_call_accumulator_args_exceeded.rs  tool_call_accumulator_args_exceeded.stderr
lsp/: Cargo.toml  README.md
lsp/src/: codec.rs  diagnostics.rs  lib.rs  manager.rs  protocol.rs  server.rs  types.rs
providers/: Cargo.toml  README.md  README.md.new
providers/src/: claude.rs  gemini.rs  lib.rs  openai.rs  retry.rs  sse_types.rs
scripts/toc-gen/: Cargo.toml
scripts/toc-gen/src/: main.rs
tools/: Cargo.toml  README.md
tools/src/: builtins.rs  change_recording.rs  command_blacklist.rs  config.rs  git.rs  lib.rs  lp1.rs  memory.rs  phase_gate.rs  powershell_ast.rs  process.rs  recall.rs  region_hash.rs  sandbox.rs  search.rs  security.rs  shell.rs  webfetch.rs  windows_run.rs  windows_run_host.rs
tools/src/webfetch/: cache.rs  chunk.rs  extract.rs  http.rs  mod.rs  resolved.rs  robots.rs  types.rs
tools/tests/: ifa_compile_fail.rs  webfetch_integration.rs
tools/tests/compile_fail/: tool_executor_legacy_methods.rs  tool_executor_legacy_methods.stderr
tui/: Cargo.toml  README.md
tui/src/: approval.rs  diff_render.rs  effects.rs  format.rs  input.rs  lib.rs  markdown.rs  messages.rs  shared.rs  theme.rs  tool_display.rs  tool_result_summary.rs  ui_inline.rs
tui/src/focus/: content.rs  executing.rs  idle.rs  mod.rs  reviewing.rs
types/: Cargo.toml  README.md
types/src/: budget.rs  confusables.rs  ids.rs  lib.rs  message.rs  model.rs  plan.rs  proofs.rs  sanitize.rs  settings.rs  text.rs
types/src/ui/: animation.rs  history.rs  input.rs  mod.rs  modal.rs  panel.rs  view_state.rs
types/tests/: ifa_compile_fail.rs
types/tests/compile_fail/: predicate_helpers_removed.rs  predicate_helpers_removed.stderr
utils/: Cargo.toml  README.md
utils/src/: atomic_write.rs  diff.rs  lib.rs  security.rs  windows_acl.rs
webfetch/: Cargo.toml  README.md
webfetch/src/: browser.rs  cache.rs  chunk.rs  extract.rs  http.rs  lib.rs  resolved.rs  robots.rs  types.rs
webfetch/tests/: browser.rs  integration.rs
(+73 files in other folders)
