[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Daniel Cazares"]

[package]
name = "forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A custom TUI for interacting with GPT and Claude"

[dependencies]
# Workspace crates
forge-engine = { path = "crates/forge-engine" }
forge-tui = { path = "crates/forge-tui" }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Workspace crates for testing
forge-types = { path = "crates/forge-types" }
forge-engine = { path = "crates/forge-engine" }
forge-tui = { path = "crates/forge-tui" }

# Async test runtime
tokio-test = "0.4"

# HTTP mocking
wiremock = "0.6"

# JSON for test fixtures
serde_json = "1.0"

# Temp directories for test isolation
tempfile = "3.15"

# Better assertion output
pretty_assertions = "1.4"

# Snapshot testing
insta = { version = "1.42", features = ["json"] }

# Virtual terminal for TUI snapshot testing
vt100 = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
