[workspace]
members = [
    "cli",
    "context",
    "engine",
    "providers",
    "tui",
    "types",
    "webfetch",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Daniel Cazares"]

[workspace.dependencies]
# Internal crates
forge-types = { path = "types" }
forge-providers = { path = "providers" }
forge-context = { path = "context" }
forge-engine = { path = "engine" }
forge-tui = { path = "tui" }
forge-webfetch = { path = "webfetch" }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.42", default-features = false }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
chromiumoxide = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Tooling
base64 = "0.22"
globset = "0.4"
jsonschema = "0.17"
sha2 = "0.10"
url = "2.5"
ignore = "0.4"
chrono = "0.4"

# HTML parsing
scraper = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Token counting
tiktoken-rs = "0.6"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Data directory
dirs = "5.0"

# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Markdown parsing
pulldown-cmark = "0.12"

# Clipboard
arboard = "3.4"

# Testing
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.15"
pretty_assertions = "1.4"
insta = { version = "1.42", features = ["json"] }
vt100 = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
