[workspace]
members = [
    "cli",
    "context",
    "engine",
    "providers",
    "tui",
    "types",
    "webfetch",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Daniel Cazares"]

[workspace.dependencies]
# Internal crates
forge-types = { path = "types" }
forge-providers = { path = "providers" }
forge-context = { path = "context" }
forge-engine = { path = "engine" }
forge-tui = { path = "tui" }
forge-webfetch = { path = "webfetch" }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.42", default-features = false }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
chromiumoxide = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Tooling
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
globset = "0.4"
jsonschema = "0.17"
sha2 = "0.10"
url = "2.5"
ignore = "0.4"
chrono = "0.4"

# HTML parsing
scraper = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Token counting
tiktoken-rs = "0.6"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Data directory
dirs = "5.0"

# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Markdown parsing
pulldown-cmark = "0.12"

# Clipboard
arboard = "3.4"

# Unix libc bindings (for getuid)
libc = "0.2"

# Testing
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.15"
pretty_assertions = "1.4"
insta = { version = "1.42", features = ["json"] }
vt100 = "0.15"

[workspace.lints.clippy]
# Enable pedantic but allow specific lints that are design choices
pedantic = { level = "warn", priority = -1 }

# Documentation lints - extensive work, allow for now
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Function length - readability > arbitrary limits
too_many_lines = "allow"

# Cast lints - intentional casts in context
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

# Struct design choices
struct_excessive_bools = "allow"
struct_field_names = "allow"

# These are style preferences
similar_names = "allow"
module_name_repetitions = "allow"

# Error handling design - boxing would add complexity
result_large_err = "allow"

# Pass by value/ref micro-optimizations - not worth the churn
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"

# Builder pattern - returning Self doesn't always need must_use
return_self_not_must_use = "allow"

# Doc formatting - allow quotes in docs
doc_markdown = "allow"

# String formatting style - format_push_string and format_collect
# Using push_str(&format!()) is often clearer than write!()
format_push_string = "allow"
format_collect = "allow"

# Option/Result patterns - map_unwrap_or
# Using map().unwrap_or_else() is sometimes clearer than map_or_else()
map_unwrap_or = "allow"

# Let-else pattern - not always clearer
manual_let_else = "allow"

# Clone efficiency - clone_from is micro-optimization
assigning_clones = "allow"

# Struct initialization style
default_trait_access = "allow"

# Function return style - unnecessary_wraps
# Sometimes Result is used for API consistency
unnecessary_wraps = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
