[package]
name = "forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A custom TUI for interacting with GPT and Claude"

[lints]
workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[[test]]
name = "all"
path = "../tests/all.rs"

[[test]]
name = "ui_snapshots"
path = "../tests/ui_snapshots.rs"

[dependencies]
forge-engine.workspace = true
forge-tui.workspace = true

ratatui.workspace = true
crossterm.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ErrorReporting",
] }

[dev-dependencies]
forge-types.workspace = true

wiremock.workspace = true
serde_json.workspace = true
tempfile.workspace = true
insta.workspace = true
vt100.workspace = true
