[package]
name = "forge-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Context window management with distillation and persistence"

[lints]
workspace = true

[dependencies]
forge-types.workspace = true
forge-providers.workspace = true
forge-utils.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
thiserror.workspace = true

tiktoken-rs.workspace = true
rusqlite.workspace = true
sha2.workspace = true

tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
