[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core state machine and domain logic for Forge"

[lints]
workspace = true

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-utils.workspace = true

serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
