[package]
name = "forge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core state machine and orchestration for Forge"

[lints]
workspace = true

[dependencies]
forge-types.workspace = true
forge-providers.workspace = true
forge-context.workspace = true
forge-webfetch.workspace = true

tokio = { workspace = true, features = ["sync", "rt", "time", "process", "io-util", "fs"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
base64.workspace = true
globset.workspace = true
jsonschema.workspace = true
regex.workspace = true
sha2.workspace = true
tempfile.workspace = true
ignore.workspace = true
unicode-normalization.workspace = true
chrono.workspace = true

anyhow.workspace = true
thiserror.workspace = true

futures-util.workspace = true
dirs.workspace = true

tracing.workspace = true

unicode-segmentation.workspace = true
which = "7"
similar = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
