[package]
name = "forge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core state machine and orchestration for Forge"

[lints]
workspace = true

[features]
default = []
focus-view = []

[dependencies]
forge-types.workspace = true
forge-providers.workspace = true
forge-context.workspace = true
forge-config.workspace = true
forge-lsp.workspace = true
forge-tools.workspace = true

tokio = { workspace = true, features = ["sync", "rt", "time"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
aho-corasick.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
chrono.workspace = true

unicode-segmentation.workspace = true

anyhow.workspace = true
thiserror.workspace = true

futures-util.workspace = true
dirs.workspace = true

tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
