[package]
name = "forge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core state machine and orchestration for Forge"

[lints]
workspace = true

[features]
default = []

[dependencies]
forge-types.workspace = true
forge-providers.workspace = true
forge-context.workspace = true
forge-config.workspace = true
forge-core.workspace = true
forge-lsp.workspace = true
forge-tools.workspace = true
forge-utils.workspace = true

tokio = { workspace = true, features = ["sync", "rt", "time", "fs"] }

serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
chrono.workspace = true

anyhow.workspace = true

futures-util.workspace = true
dirs.workspace = true

tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
toml.workspace = true
tempfile.workspace = true
