[package]
name = "forge-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LSP client for consuming language server diagnostics"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
