[package]
name = "forge-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "LSP client for consuming language server diagnostics"

[lints]
workspace = true

[dependencies]
forge-types = { path = "../types" }
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
globset.workspace = true
which = "8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
