[package]
name = "forge-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "LLM provider clients (Claude, OpenAI) with streaming support"

[lints]
workspace = true

[dependencies]
forge-types.workspace = true

reqwest.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["time"] }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rand.workspace = true

anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
