[package]
name = "forge-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Tool executor framework and built-in tools for Forge"

[lints]
workspace = true

[dependencies]
forge-types.workspace = true
forge-context.workspace = true
forge-utils.workspace = true

tokio = { workspace = true, features = ["sync", "rt", "time", "process", "io-util", "fs", "net"] }
reqwest = { workspace = true, features = ["gzip", "brotli", "deflate"] }
url.workspace = true
scraper.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
globset.workspace = true
jsonschema.workspace = true
regex.workspace = true
sha2.workspace = true
ignore.workspace = true
unicode-normalization.workspace = true
chrono.workspace = true

thiserror.workspace = true

futures-util.workspace = true
dirs.workspace = true

tracing.workspace = true

which = "8"
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
wiremock.workspace = true
trybuild = "1"
