[package]
name = "forge-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "TUI rendering and input handling for Forge"

[dependencies]
forge-engine.workspace = true
forge-types.workspace = true

ratatui.workspace = true
crossterm.workspace = true

unicode-width.workspace = true
unicode-segmentation.workspace = true
pulldown-cmark.workspace = true
arboard.workspace = true
serde_json.workspace = true

tokio = { workspace = true, features = ["sync", "rt"] }

anyhow.workspace = true
