[package]
name = "forge-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "TUI rendering and input handling for Forge"

[lints]
workspace = true

[features]
default = []
focus-view = ["forge-engine/focus-view"]

[dependencies]
forge-engine.workspace = true
forge-types.workspace = true

ratatui.workspace = true
crossterm.workspace = true

unicode-width.workspace = true
unicode-segmentation.workspace = true
pulldown-cmark.workspace = true
serde_json.workspace = true
serde.workspace = true

tokio = { workspace = true, features = ["sync", "rt"] }
arboard.workspace = true

anyhow.workspace = true
tracing.workspace = true
