[package]
name = "forge-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core domain types for Forge - no IO, no async"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-script.workspace = true
