[package]
name = "forge-webfetch"
description = "URL fetching with browser fallback for Forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
forge-types = { workspace = true }
forge-context = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt", "time", "sync", "net", "process", "io-util", "macros"] }
futures-util = { workspace = true }

# HTTP
reqwest = { workspace = true, features = ["gzip", "brotli", "deflate"] }
url = { workspace = true }
chromiumoxide = { workspace = true }

# HTML processing
scraper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (cache keys, hashing)
sha2 = { workspace = true }
base64 = { workspace = true }

# Token counting
tiktoken-rs = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Data directory
dirs = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
