[package]
name = "forge-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Context window management with summarization and persistence"

[dependencies]
forge-types = { path = "../forge-types" }
forge-providers = { path = "../forge-providers" }

# For summarization API calls (to be refactored to trait later)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Token counting
tiktoken-rs = "0.6"

# SQLite for journal
rusqlite = { version = "0.32", features = ["bundled"] }

# Data directory
dirs = "5.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt", "macros"] }
