[package]
name = "forge-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LLM provider clients (Claude, OpenAI) with streaming support"

[dependencies]
forge-types = { path = "../forge-types" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
