[package]
name = "toc-gen"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "toc-gen"
path = "src/main.rs"

[dependencies]
toml = "1.0"
toml_edit = "0.25"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = []
generate = ["reqwest", "serde_json", "tokio"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true
